Partial commit for task lists JS helpers

--- a/public/500.html
+++ b/public/500.html
@@ -27,12 +27,12 @@
         An error has just occurred.
         It sometimes happens.
         We're automatically emailed whenever an 
-        error occurred.
+        error occurrs.
       </p>
       <p>
         If you want to help us out you can provide
         us with more detailed information on what
-        you we're doing when the error occurred by
+        you were doing when the error occurred by
         submitting us a bug ticket or sending us an
         email
       </p>
