Partial commit for task lists JS helpers

--- a/public/500.html
+++ b/public/500.html
@@ -27,7 +27,7 @@
         An error has just occurred.
         It sometimes happens.
         We're automatically emailed whenever an 
-        error occurred.
+        error occurrs.
       </p>
       <p>
         If you want to help us out you can provide
