The app is now site agnostic and configurable at teambox.yml

--- a/public/500.html
+++ b/public/500.html
@@ -41,15 +41,14 @@
   <div class="block_point"><!-- --></div>  
   <div class="block_wrap either">
     <div class="block">
-      <a href="" class="bug_ticket">Submit us a Bug ticket</a>
+      <a href="http://teambox.tenderapp.com" class="bug_ticket">Submit us a Bug ticket</a>
     </div><!-- block -->
   </div><!-- block_wrap -->
   <br />
   <div class="block_wrap either">
     <div class="block">
-      <h2>Send an email to either</h2>
-      <p>Andrew (CTO) at <a href="mailto:andrew@teambox.com">andrew@teambox.com</a></p>
-      <p>Pablo (CEO) at <a href="mailto:pablo@teambox.com">pablo@teambox.com</a></p>
+      <h2>Or send us an email</h2>
+      <p><a href="mailto:support@teambox.com">support@teambox.com</a></p>
     </div><!-- block -->
   </div><!-- block_wrap -->
 </body>
