Restyling the background so it's now light

--- a/public/500.html
+++ b/public/500.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div class="header"><img src="images/header_logo.png"></div>
+  <div class="header"><img src="images/header_logo_black.png"></div>
   <div class="block_wrap first">
     <div class="block">
       <h1>Someone threw a wrench in the works!</h1>
