Adding calendar_date_selector for Tasks and Task Lists

--- a/public/500.html
+++ b/public/500.html
@@ -4,22 +4,22 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>We're sorry, but something went wrong (500)</title>
   <style type="text/css">
-    body { background: rgb(49,48,48); font-family: Helvetica, arial, sans-serif; padding-top: 50px; }
-    div.header { width: 440px; margin: 0px auto; }
-    div.block_wrap { background: url(images/error_top.jpg) no-repeat top rgb(255,255,255); width: 440px; margin: 0px auto;}
-    div.block { background: url(images/error_bottom.jpg) no-repeat bottom; padding: 10px; }
-    div.block_point { background: url(images/error_point.jpg) no-repeat top center; height: 28px; margin: 0px auto; }
+    body { background: rgb(49,48,48); font-family: Helvetica, arial, sans-serif; padding-top: 20px; }
+    div.header { width: 440px; margin: 20px auto; }
+    div.block_wrap { background: url(/images/error_top.jpg) no-repeat top rgb(255,255,255); width: 440px; margin: 0px auto;}
+    div.block { background: url(/images/error_bottom.jpg) no-repeat bottom; padding: 10px; }
+    div.block_point { background: url(/images/error_point.jpg) no-repeat top center; height: 28px; margin: 0px auto; }
     h1 { text-align: center; text-transform: uppercase; font-size: 18px; color: rgb(240,0,0); line-height: 1.5em; margin-top: 0px; margin-bottom: 0px;}
     h2 { text-transform: uppercase; font-size: 16px; text-align: center; margin: 5px 0px; }
     p { font-size: 15px; margin: 5px 10px; line-height: 1.5em; }
     div.either p { text-align: center; margin: 0px; }
-    a.bug_ticket { text-transform: uppercase; font-weight: bold; display: block; background: url(images/bug_ticket.jpg) no-repeat; width: 400px; height: 51px; margin: 10px auto; text-decoration: none; font-size: 26px; text-align: center; color: rgb(0,0,0); padding-top: 24px; }
+    a.bug_ticket { text-transform: uppercase; font-weight: bold; display: block; background: url(/images/bug_ticket.jpg) no-repeat; width: 400px; height: 51px; margin: 10px auto; text-decoration: none; font-size: 26px; text-align: center; color: rgb(0,0,0); padding-top: 24px; }
     div.first { text-align: center; }
   </style>
 </head>
 
 <body>
-  <div class="header"><img src="images/header_logo_black.png"></div>
+  <div class="header"><img src="/images/header_logo_white_large.png"></div>
   <div class="block_wrap first">
     <div class="block">
       <h1>Someone threw a wrench in the works!</h1>
