English and french typos

--- a/public/500.html
+++ b/public/500.html
@@ -41,7 +41,7 @@
   <div class="block_point"><!-- --></div>  
   <div class="block_wrap either">
     <div class="block">
-      <a href="http://teambox.tenderapp.com" class="bug_ticket">Submit us a Bug ticket</a>
+      <a href="http://teambox.tenderapp.com" class="bug_ticket">Submit a Bug ticket</a>
     </div><!-- block -->
   </div><!-- block_wrap -->
   <br />
