Send bug requests to the mailing list instead of the support system

--- a/public/500.html
+++ b/public/500.html
@@ -23,28 +23,24 @@
       <p>
         An error has just occurred.
         It sometimes happens.
-        We're automatically emailed whenever an 
-        error occurrs.
       </p>
       <p>
-        If you want to help us out, you can provide
-        us with more detailed information on <strong>what
-        you were doing</strong> when the error occurred by
-        submitting us a bug ticket
+        If you want to help us out, you can give detailed information on <strong>what
+        you were doing</strong> when the error occurred by joining us in the mailing list
       </p>
     </div><!-- block -->
   </div><!-- block_wrap -->  
   <br/>
   <div class="block_wrap either">
     <div class="block">
-      <a href="http://teambox.tenderapp.com" class="bug_ticket">Submit a Bug ticket</a>
+      <a href="http://teambox.com/group" class="bug_ticket">Check the mailing list</a>
     </div><!-- block -->
   </div><!-- block_wrap -->
   <br />
   <div class="block_wrap either">
     <div class="block">
-      <h2>Or send us an email</h2>
-      <p><a href="mailto:support@teambox.com">support@teambox.com</a></p>
+      <h2>Or send an email to</h2>
+      <p><a href="mailto:teambox@googlegroups.com">teambox@googlegroups.com</a></p>
     </div><!-- block -->
   </div><!-- block_wrap -->
 </body>
