--- a/public/500.html
+++ b/public/500.html
@@ -26,22 +26,16 @@
       </p>
       <p>
         If you want to help us out, you can give detailed information on <strong>what
-        you were doing</strong> when the error occurred by joining us in the mailing list
+        you were doing</strong> when the error occurred.
       </p>
     </div><!-- block -->
   </div><!-- block_wrap -->  
   <br/>
   <div class="block_wrap either">
     <div class="block">
-      <a href="http://teambox.com/group" class="bug_ticket">Check the mailing list</a>
+      <a href="http://teambox.com/community" class="bug_ticket">Ask in the Teambox community</a>
     </div><!-- block -->
   </div><!-- block_wrap -->
   <br />
-  <div class="block_wrap either">
-    <div class="block">
-      <h2>Or send an email to</h2>
-      <p><a href="mailto:teambox@googlegroups.com">teambox@googlegroups.com</a></p>
-    </div><!-- block -->
-  </div><!-- block_wrap -->
 </body>
 </html>
