Add notices of "you didn't configure your domain name" and "configure your email"

--- a/public/500.html
+++ b/public/500.html
@@ -33,7 +33,7 @@
   <br/>
   <div class="block_wrap either">
     <div class="block">
-      <a href="http://teambox.com/community" class="bug_ticket">Ask in the Teambox community</a>
+      <a href="http://teambox.com/community" class="bug_ticket">Ask the community</a>
     </div><!-- block -->
   </div><!-- block_wrap -->
   <br />
