--- a/public/static/activities.html
+++ b/public/static/activities.html
@@ -24,7 +24,7 @@
 </script>  </head> 
   <body class='index_projects en development controller_projects' reload_url='/projects'> 
     <script src="/javascripts/modernizr.js?1289156755" type="text/javascript"></script> 
-    <script src="/i18n/environment.js" type="text/javascript"></script> 
+    <script src="/i18n/environment.js?z" type="text/javascript"></script> 
     <style type='text/css'> 
             a.micro_avatar.my_avatar { background: url(http://www.gravatar.com/avatar/85ebbad6d49ffba12ada85b98baca888?size=24&default=identicon) no-repeat }
           </style> 
