--- a/public/static/activities.html
+++ b/public/static/activities.html
@@ -14,7 +14,7 @@
     <link href="/stylesheets/print.css?1289683688" media="print" rel="stylesheet" type="text/css" /> 
     
     <style type="text/css">a { color: #259BAD;}a:hover { color: #df5249;}body { font-color: #333;}</style> 
-    <script src="/sprockets.js" type="text/javascript"></script> 
+    <script src="/sprockets.js?1" type="text/javascript"></script> 
     
 <script type="text/javascript"> 
 //<![CDATA[
@@ -24,7 +24,7 @@
 </script>  </head> 
   <body class='index_projects en development controller_projects' reload_url='/projects'> 
     <script src="/javascripts/modernizr.js?1289156755" type="text/javascript"></script> 
-    <script src="/i18n/environment.js?z" type="text/javascript"></script> 
+    <script src="/i18n/environment.js?1" type="text/javascript"></script> 
     <style type='text/css'> 
             a.micro_avatar.my_avatar { background: url(http://www.gravatar.com/avatar/85ebbad6d49ffba12ada85b98baca888?size=24&default=identicon) no-repeat }
           </style> 
