--- a/public/static/tasks.html
+++ b/public/static/tasks.html
@@ -15,6 +15,7 @@
     
     <style type="text/css">a { color: #259BAD;}a:hover { color: #df5249;}body { font-color: #333;}</style> 
     <script src="/sprockets.js?1" type="text/javascript"></script> 
+    <script src="/coffeescripts/all.js" type="text/javascript"></script> 
     
 <script type="text/javascript"> 
 //<![CDATA[
