Added new comment form

--- a/public/mockup/index.html
+++ b/public/mockup/index.html
@@ -162,7 +162,34 @@
           <div class="separator">
             <span id="view_title">Recent activity</span>
           </div>
-          <div class="content" id="content"><div id="activities"><div class="thread" data-class="task" data-id="7" data-project-id="1"><div class="comment comment_header"><span class="time"><time data-msec="1307547790000" pubdate="true" class="timeago">2011-06-08 15:43:10 +0000</time></span><div class="info"><img src="img_3_2/ico/tick-button-24.png"><div class="comment_count"><span>13</span></div></div><div class="block"><div class="thread_title"><a href="function (task, project) {
+          <div class="content" id="content">
+          <form id="new_conversation_form">
+            <div class="big_avatar"><span></span></div>
+            <div class="textarea_big"><textarea cols="40" placeholder="Write here"></textarea></div>
+            <div class="info_new_conversation">
+              <div class="dropdown_projects">
+                <label for="field_projects" class="info_label">Comment on</label>
+                <div>
+                  <input id="field_projects" placeholder="Select a project" type="text" autocomplete="on">
+                  <a class="dropdown_arrow" href="#"></a>
+                  <ol class="dropdown_autocomplete"><li>Development</li><li>Yoga projects</li><li>Teambox</li></ol>
+                </div>
+              </div>
+              <a class="button_blue" href="#"><span>Save</span></a>
+              
+              <div class="new_comment_actions_div">
+                <span class="info_label">More actions</span>
+                <ol class="new_comment_actions">
+                  <li><a class="btn_attach" href="#"></a></li>
+                  <li><a class="btn_doc" href="#"></a></li>
+                  <li><a class="btn_users" href="#"></a></li>
+                  <li><a class="btn_lock" href="#"></a></li>
+                </ol>
+              </div>
+            </div>
+          </form>
+          <div class="clear"></div>
+          <div id="activities"><div class="thread" data-class="task" data-id="7" data-project-id="1"><div class="comment comment_header"><span class="time"><time data-msec="1307547790000" pubdate="true" class="timeago">2011-06-08 15:43:10 +0000</time></span><div class="info"><img src="img_3_2/ico/tick-button-24.png"><div class="comment_count"><span>13</span></div></div><div class="block"><div class="thread_title"><a href="function (task, project) {
     return '#!/projects/' + project.permalink + '/tasks/' + task.id;
   }">Project Welcome on</a><a href="#!/projects/earthworks/task_lists/3">Project Welcome task list</a></div><div class="project_overlay"><a data-project-id="1">Earthworks Yoga</a></div><div class="task_summary"><span class="task_status task_status_open">open</span>Assigned to Corrina Kottke</div><p class="excerpt"><strong>Corrina Kottke</strong>ewrwerewr</p></div><div class="clear"></div></div><div class="comments"><div data-editable-before="1306926599000" id="comment_35" data-project="1" data-id="35" data-user="2" class="comment"><div class="info"><a style="background: url(http://www.gravatar.com/avatar/49958537f28bbde1a14027f1a5cd06d8?size=24&amp;default=identicon) no-repeat" class="micro_avatar"></a></div><div class="block"><div class="actions_menu"><img src="img_3_2/ico/arrow-dropdown.png" alt="Triangle" class="triangle"><div class="extra"><a style="display:block;" class="edit">Edit</a><a rel="facebox" href="#email_post_35" class="reply_email">Reply via email</a><a style="display:block;" href="#" class="delete">Delete</a></div></div><div class="actiondate"><time data-msec="1306926599000" pubdate="true" class="timeago">Jun 1</time></div><div class="body textilized"><div class="before"><a class="user"></a></div><p>I found a yoga website that I really love. It’s a dumb name for a studio, but the website design is flawless: Let’s Get Bent: <a href="http://bit.ly/8p0gmf">http://bit.ly/8p0gmf</a></p>
 </div></div><!-- TODO: google docs--><div id="email_post_35" style="width: 600px;display: none;"><h1><span class="translation_missing">en, Users, masylum, Sites, teambox, app, templates, partials, comment, jade, title</span></h1><p><span class="translation_missing">en, Users, masylum, Sites, teambox, app, templates, partials, comment, jade, send_replies_with_this_email</span></p><p><a href:="" mailto:="" +="" reply_email_url="href: mailto: + reply_email_url">earthworks+task+7@domain.com</a></p><p><span class="translation_missing">en, Users, masylum, Sites, teambox, app, templates, partials, comment, jade, teambox_magic_happens</span></p><p><span class="translation_missing">en, Users, masylum, Sites, teambox, app, templates, partials, comment, jade, other_shortcuts_available</span></p><table style="width: 580px"><tbody><tr><td><a href:="" mailto:="" +="" conversation_url="href: mailto: + conversation_url">earthworks+conversation@domain.com</a></td><td><span class="translation_missing">en, Users, masylum, Sites, teambox, app, templates, partials, comment, jade, will_create_conversation</span></td></tr><tr><td><a href:="" mailto:="" +="" task_url="href: mailto: + task_url">earthworks+task@domain.com</a></td><td><span class="translation_missing">en, Users, masylum, Sites, teambox, app, templates, partials, comment, jade, will_create_task</span></td></tr></tbody></table></div><div class="clear"></div></div><div data-editable-before="1306926668000" id="comment_36" data-project="1" data-id="36" data-user="2" class="comment"><div class="info"><a style="background: url(http://www.gravatar.com/avatar/49958537f28bbde1a14027f1a5cd06d8?size=24&amp;default=identicon) no-repeat" class="micro_avatar"></a></div><div class="block"><div class="actions_menu"><img src="img_3_2/ico/arrow-dropdown.png" alt="Triangle" class="triangle"><div class="extra"><a style="display:block;" class="edit">Edit</a><a rel="facebox" href="#email_post_36" class="reply_email">Reply via email</a><a style="display:block;" href="#" class="delete">Delete</a></div></div><div class="actiondate"><time data-msec="1306926668000" pubdate="true" class="timeago">Jun 1</time></div><div class="body textilized"><div class="before"><a class="user"></a></div><p>FELIBAAAAAAAAAA!</p>
