--- a/public/mockup/new_tasks.html
+++ b/public/mockup/new_tasks.html
@@ -159,7 +159,47 @@
           <div class="separator">
             <span id="view_title">All tasks in your projects</span>
           </div>
-          <div class="content" id="content"><div class="filters"><strong>Filter tasks:</strong><input class="filter_tasks_by_name" type="search" placeholder="By name"><select id="filter_assigned"><option value="">anybody (6)</option><option value="mine">my tasks (0)</option><option value="unassigned">unassigned (3)</option></select><select id="filter_due_date"><option value="">anytime (6)</option><option value="overdue">late tasks (2)</option><option value="unassigned_date">no date assigned (4)</option><option value="divider" disabled="disabled">------</option><option value="due_today">today (0)</option><option value="due_tomorrow">tomorrow (0)</option><option value="due_week">this week (0)</option><option value="due_2weeks">next 2 weeks (0)</option><option value="due_3weeks">next 3 weeks (0)</option><option value="due_month">within 1 month (0)</option></select><select id="filter_status"><option value="">all status (6)</option><option value="status_0">new (0)</option><option value="status_1">open (4)</option><option value="status_2">hold (1)</option><option value="status_3">resolved (1)</option><option value="status_4">rejected (0)</option></select></div><div id="tasks_for_all_projects"><div class="task_list"><div class="tasks"><div class="group">assigned</div><div class="task overdue status_1 status_notopen due_on task_list_1 assigned user_4" id="task_6" data-task-id="6" style=""><!-- CLEANME: taskStatus is deprecated and hidden--><div class="taskStatus"><!-- <img src='drag.png' class='task_drag'/> if editable and !task.archived?--><span data-task-id="6" class="task_status task_counter">1</span></div><div class="status">Maya B</div><div class="taskName"><a href="/#!/projects/1/tasks/6" class="name">Contact area businesses for banner exchange</a><form style="display:none;" class="edit_title"><input data-disable-with="Saving…" value="Contact area businesses for banner exchange"></form><div style="display:none;" class="expanded_actions"><a href="function (task, project) {
+          <div class="content" id="content">
+          <div class="filters">
+          <strong>Filter:</strong>
+          <input id="filter_tasks_by_name" type="text" placeholder="By name">
+          <div class="dropdown_filter">
+            <a class="selected_item" id="selected_assigned" href="#">anybody (6)</a><a class="dropdown_arrow" href="#"></a>
+            <ol id="filter_assigned">
+              <li value="" class="selected"><a href="#">anybody (6)</a></li>
+              <li value="mine"><a href="#">my tasks (0)</a></li>
+              <li class="last_item" value="unassigned"><a href="#">unassigned (3)</a></li>
+            </ol>
+          </div>
+          <div class="dropdown_filter">
+            <a class="selected_item" id="selected_due_date" href="#">anytime (6)</a><a class="dropdown_arrow" href="#"></a>
+            <ol id="filter_due_date">
+              <li value="" class="selected"><a href="#">anytime (6)</a></li>
+              <li value="overdue"><a href="#">late tasks (2)</a></li>
+              <li value="unassigned_date"><a href="#">no date assigned (4)</a></li>
+              <li value="divider" disabled="disabled" class="separator"></li>
+              <li value="due_today"><a href="#">today (0)</a></li>
+              <li value="due_tomorrow"><a href="#">tomorrow (0)</a></li>
+              <li value="due_week"><a href="#">this week (0)</a></li>
+              <li value="due_2weeks"><a href="#">next 2 weeks (0)</a></li>
+              <li value="due_3weeks"><a href="#">next 3 weeks (0)</a></li>
+              <li class="last_item" value="due_month"><a href="#">within 1 month (0)</a></li>
+            </ol>
+          </div>
+          <div class="dropdown_filter" id="dropwdown_status">
+            <a class="selected_item" id="selected_status" href="#">all status (6)</a><a class="dropdown_arrow" href="#"></a>
+            <ol id="filter_status">
+              <li value="" class="selected"><a href="#">all status (6)</a></li>
+              <li value="status_0"><a href="#">new (0)</a></li>
+              <li value="status_1"><a href="#">open (4)</a></li>
+              <li value="status_2"><a href="#">hold (1)</a></li>
+              <li value="status_3"><a href="#">resolved (1)</a></li>
+              <li class="last_item" value="status_4"><a href="#">rejected (0)</a></li>
+            </ol>
+          </div>
+        </div>
+        <div id="tasks_for_all_projects">
+          <div class="task_list"><div class="tasks"><div class="group">assigned</div><div class="task overdue status_1 status_notopen due_on task_list_1 assigned user_4" id="task_6" data-task-id="6" style=""><!-- CLEANME: taskStatus is deprecated and hidden--><div class="taskStatus"><!-- <img src='drag.png' class='task_drag'/> if editable and !task.archived?--><span data-task-id="6" class="task_status task_counter">1</span></div><div class="status">Maya B</div><div class="taskName"><a href="/#!/projects/1/tasks/6" class="name">Contact area businesses for banner exchange</a><form style="display:none;" class="edit_title"><input data-disable-with="Saving…" value="Contact area businesses for banner exchange"></form><div style="display:none;" class="expanded_actions"><a href="function (task, project) {
     return '#!/projects/' + project.permalink + '/tasks/' + task.id;
   }" class="full">Full view</a><a href="#" class="edit">Edit title</a></div><span style="display:inline-block;" class="assigned_date">May 10</span><span class="assigned_user"><a href="#!/users/maya">M. Bhaskaran</a></span><div class="extended"><span class="project"><a>Earthworks Yoga</a>→
 </span><span class="task_list"><a href="function (task_list, project) {
