--- a/public/mockup/new_tasks.html
+++ b/public/mockup/new_tasks.html
@@ -159,6 +159,7 @@
           <div class="separator">
             <span id="view_title">All tasks in your projects</span>
           </div>
+          <div class="content_scroll">
           <div class="content" id="content">
           <div class="filters">
           <strong>Filter:</strong>
@@ -304,7 +305,7 @@
           </div>
         </div>
       </div>
-      
+    </div>
     </div>
     <style type="text/css">
             form .google_docs_attachment { display: none }
